PROJECT(chap0)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

if(WIN32 AND NOT MINGW)
    message("WIN32 编译设置")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./exe/)
elseif(WIN32 AND MINGW)
    message("MINGW 编译设置")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./exe/)
elseif(UNIX AND NOT ANDROID)
    message("UNIX 编译设置")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./elf/)
elseif(ANDROID)
    message("ANDROID 编译设置")
endif()


ADD_EXECUTABLE(1-1 1-1.c)
ADD_EXECUTABLE(1-2 1-2.c)
ADD_EXECUTABLE(1-4 1-4.c)
ADD_EXECUTABLE(1-8 1-8.c)
ADD_EXECUTABLE(1-9 1-9.c)
ADD_EXECUTABLE(2-1 2-1.c)
