PROJECT(chap1)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

if(WIN32 AND NOT MINGW)
    message("WIN32 编译设置")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./exe/)
elseif(WIN32 AND MINGW)
    message("MINGW 编译设置")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./exe/)
elseif(UNIX AND NOT ANDROID)
    message("UNIX 编译设置")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./elf/)
elseif(ANDROID)
    message("ANDROID 编译设置")
endif()

ADD_EXECUTABLE(101 101.c)
ADD_EXECUTABLE(102 102.c)
ADD_EXECUTABLE(103 103.c)
ADD_EXECUTABLE(104 104.c)
ADD_EXECUTABLE(106 106.c)
ADD_EXECUTABLE(107 107.c)
ADD_EXECUTABLE(108 108.c)
ADD_EXECUTABLE(109 109.c)
ADD_EXECUTABLE(110 110.c)
ADD_EXECUTABLE(112 112.c)
ADD_EXECUTABLE(113 113.c)
ADD_EXECUTABLE(114 114.c)
ADD_EXECUTABLE(116 116.c)
ADD_EXECUTABLE(117 117.c)
ADD_EXECUTABLE(118 118.c)
ADD_EXECUTABLE(119 119.c)
ADD_EXECUTABLE(120 120.c)