PROJECT(chap2)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

if(WIN32 AND NOT MINGW)
    message("WIN32 编译设置")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./exe/)
elseif(WIN32 AND MINGW)
    message("MINGW 编译设置")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./exe/)
elseif(UNIX AND NOT ANDROID)
    message("UNIX 编译设置")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./elf/)
elseif(ANDROID)
    message("ANDROID 编译设置")
endif()

ADD_EXECUTABLE(201 201.c)
ADD_EXECUTABLE(203 203.c)
ADD_EXECUTABLE(205 205.c)
ADD_EXECUTABLE(207 207.c)
ADD_EXECUTABLE(208 208.c)
ADD_EXECUTABLE(209 209.c)
ADD_EXECUTABLE(210 210.c)
ADD_EXECUTABLE(211 211.c)
ADD_EXECUTABLE(212 212.c)
ADD_EXECUTABLE(216 216.c)
ADD_EXECUTABLE(217 217.c)
ADD_EXECUTABLE(219 219.c)
ADD_EXECUTABLE(220 220.c)
ADD_EXECUTABLE(221 221.c)