PROJECT(chap3)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

if(WIN32 AND NOT MINGW)
    message("WIN32 编译设置")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./exe/)
elseif(WIN32 AND MINGW)
    message("MINGW 编译设置")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./exe/)
elseif(UNIX AND NOT ANDROID)
    message("UNIX 编译设置")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./elf/)
elseif(ANDROID)
    message("ANDROID 编译设置")
endif()

ADD_EXECUTABLE(301 301.c)
ADD_EXECUTABLE(302 302.c)
ADD_EXECUTABLE(303 303.c)
ADD_EXECUTABLE(305 305.c)
ADD_EXECUTABLE(306 306.c)
ADD_EXECUTABLE(307 307.c)
ADD_EXECUTABLE(308 308.c)
ADD_EXECUTABLE(309 309.c)
ADD_EXECUTABLE(310 310.c)
ADD_EXECUTABLE(311 311.c)
ADD_EXECUTABLE(312 312.c)
ADD_EXECUTABLE(313 313.c)
ADD_EXECUTABLE(314 314.c)
