PROJECT(chap4)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

if(WIN32 AND NOT MINGW)
    message("WIN32 编译设置")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./exe/)
elseif(WIN32 AND MINGW)
    message("MINGW 编译设置")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./exe/)
elseif(UNIX AND NOT ANDROID)
    message("UNIX 编译设置")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./elf/)
elseif(ANDROID)
    message("ANDROID 编译设置")
endif()


ADD_EXECUTABLE(401 401.c)
ADD_EXECUTABLE(402 402.c)
ADD_EXECUTABLE(404 404.c)
ADD_EXECUTABLE(406 406.c)
ADD_EXECUTABLE(407v1 407v1.c)
ADD_EXECUTABLE(407v2 407v2.c)
ADD_EXECUTABLE(408 408.c)
ADD_EXECUTABLE(409 409.c)
ADD_EXECUTABLE(410 410.c)
ADD_EXECUTABLE(411 411.c)
ADD_EXECUTABLE(412 412.c)
ADD_EXECUTABLE(413 413.c)
ADD_EXECUTABLE(414v1 414v1.c)
ADD_EXECUTABLE(414v2 414v2.c)
ADD_EXECUTABLE(415 415.c)
ADD_EXECUTABLE(416 416.c)
ADD_EXECUTABLE(417v1 417v1.c)
ADD_EXECUTABLE(417v2 417v2.c)