PROJECT(chap5)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

if(WIN32 AND NOT MINGW)
    message("WIN32 编译设置")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./exe/)
elseif(WIN32 AND MINGW)
    message("MINGW 编译设置")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./exe/)
elseif(UNIX AND NOT ANDROID)
    message("UNIX 编译设置")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./elf/)
elseif(ANDROID)
    message("ANDROID 编译设置")
endif()


ADD_EXECUTABLE(502 502.c)
ADD_EXECUTABLE(503 503.c)
ADD_EXECUTABLE(504 504.c)
ADD_EXECUTABLE(505-RC4Algorithm 505-RC4Algorithm.c)
ADD_EXECUTABLE(506 506.c)
ADD_EXECUTABLE(507 507.c)
ADD_EXECUTABLE(508 508.c)
ADD_EXECUTABLE(510_client 510_client.c)
ADD_EXECUTABLE(510_server 510_server.c)
ADD_EXECUTABLE(511_fork 511_fork.c)
ADD_EXECUTABLE(511_pthread 511_pthread.c)
ADD_EXECUTABLE(512 512.c)
