PROJECT(chap6)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

if(WIN32 AND NOT MINGW)
    message("WIN32 编译设置")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./exe/)
elseif(WIN32 AND MINGW)
    message("MINGW 编译设置")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./exe/)
elseif(UNIX AND NOT ANDROID)
    message("UNIX 编译设置")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./elf/)
elseif(ANDROID)
    message("ANDROID 编译设置")
endif()

ADD_EXECUTABLE(601 601.c)
ADD_EXECUTABLE(605 605.c)
ADD_EXECUTABLE(606 606.c)
ADD_EXECUTABLE(607 607.c)
ADD_EXECUTABLE(608 608.c)
ADD_EXECUTABLE(609 609.c)
ADD_EXECUTABLE(610 610.c)
ADD_EXECUTABLE(613 613.c)
ADD_EXECUTABLE(614 614.c)
ADD_EXECUTABLE(615 615.c)
ADD_EXECUTABLE(616 616.c)
ADD_EXECUTABLE(619 619.c)
ADD_EXECUTABLE(620 620.c)
ADD_EXECUTABLE(623 623.c)
ADD_EXECUTABLE(624 624.c)
ADD_EXECUTABLE(629 629.c)